welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: 'case' expected but string literal found.
"R" => droite();
^BDR2:6: error: '}' expected but ';' found.
"R" => droite();
               ^BDR2:9: error: not a legal formal parameter
"L" =>
^BDR2:12: error: not a legal formal parameter
"I"=>
^BDR2:16: error: not a legal formal parameter
"A"=>
^BDR2:18: error: not a legal formal parameter
"B"=>
^BDR2:21: error: not a legal formal parameter
"C"=>
^BDR2:25: error: not a legal formal parameter
"Z"=>
^BDR2:27: error: not a legal formal parameter
"Y"=>
^BDR2:30: error: not a legal formal parameter
"X"=>recule();
^BDR2:38: error: eof expected but '}' found.
}
^